# phenosign

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
dev/: internal.md
docs/: generate_api_docs.py  index.md  installation.md  internal.md  requirements.txt  setup.md  tutorial.ipynb  tutorial.md
docs/source/: conf.py  index.rst  installation.rst  tutorial.ipynb
docs/source/api/: modules.rst  ppkt2synergy.analysis.rst  ppkt2synergy.condition_helper.rst  ppkt2synergy.core.rst  ppkt2synergy.io.rst  ppkt2synergy.ontology.rst  ppkt2synergy.preprocessing.rst  ppkt2synergy.rst
docs/source/usage/: correlation.rst  dataset.rst  loading.rst  synergy.rst
docs/usage/: correlation.md  dataset.md  loading.md  synergy.md
internal/: index.html
setup/: index.html
src/phenosign/: __init__.py
src/phenosign/core/: __init__.py  builder.py  dataset.py  predicates.py
src/phenosign/ontology/: __init__.py  _hpo_hierarchy.py
src/phenosyn/: __init__.py
src/phenosyn/analysis/: __init__.py
src/ppkt2synergy/: __init__.py  condition_helper.py
src/ppkt2synergy/analysis/: __init__.py  hpo_correlation_analyzer.py  pairwise_synergy_analyzer.py  synergy_analyzer.py
src/ppkt2synergy/core/: __init__.py  dataset.py  features.py  features_data.py  records.py  targets.py
src/ppkt2synergy/io/: __init__.py  hpo_loader.py  phenopacket_loader.py
src/ppkt2synergy/ontology/: __init__.py  _hpo_hierarchy.py  _term_manager.py  hierarchy.py  term_manager.py
src/ppkt2synergy/preprocessing/: __init__.py  _utils.py  adapters.py  dataset_assembler.py  dataset_builder.py  feature_builder.py  matrices.py  matrix_builder.py  target_builder.py
tests/: .gitignore
tests/analysis/: test_hpo_correlation_analyzer.py  test_pairwise_synergy_analyzer.py  test_synergy_analyzer.py
tests/io/: test_phenopacket_loader.py
tests/ontology/: test_hierarchy.py  test_term_manager.py
tests/preprocessing/: test__utils.py  test_adapters.py  test_dataset_builder.py  test_feature_builder.py  test_matrix_builder.py  test_matrix_generator.py  test_target_builder.py
tutorial/: index.html
