# pyproject.toml

[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phenosign"
requires-python = ">=3.10"
description = "A Python package for synergy and correlation analysis of HPO annotations in GA4GH phenopacket cohorts"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "Peter Robinson", email="peter.robinson@bih-charite.de"},
    {name = "Jing Chen", email="jing.chen@bih-charite.de"},
    {name = "Daniel Danis", email="daniel.gordon.danis@protonmail.com"},
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Global Alliance for Genomics and Health",
    "GA4GH Phenopacket Schema",
    "Human Phenotype Ontology",
    "GA4GH",
    "HPO"]

# version in __init__
dynamic = ["version"]

dependencies = [
    "hpo-toolkit>=0.5.0,<0.6",
    "phenopackets>=2.0.2,<3.0",
    "scikit-learn>=1.6.1,<2.0",
    "numpy>=1.26.4,<3.0",
    "pandas>=2.2.3,<3.0",
    "plotly>=5.24.1,<6.0",
    "gpsea>=0.9.11",
    "scipy>=1.15.1,<2.0",          
    "joblib>=1.4.2,<2.0",        
    "tqdm>=4.67.1,<5.0",          
    "statsmodels>=0.14.4,<1.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0"]
docs = [
    'mkdocs-material[imaging]>=9.5.10,<10',
    'mkdocs-material-extensions>=1.3,<2.0',
    'mkdocstrings[python]>=0.22,<1.0',
    'mkdocs-gen-files>=0.5.0',
    'pillow',
    'cairosvg',
]



[project.urls]
homepage = "https://github.com/P2GX/phenosign"
repository = "https://github.com/P2GX/phenosign.git"
documentation = "https://P2GX.github.io/phenosign/"
bugtracker = "https://github.com/P2GX/phenosign/issues"

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "phenosign.__version__" }



[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 88

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
